--- a/Config/templates/Student/apply_leave.html
+++ b/Config/templates/Student/apply_leave.html
@@ -19,7 +19,7 @@
                   <div class="col-sm-12">
                      <div class="card">
                         <div class="card-body">
-                           <form method="post" action="{% url 'staff_apply_leave_save' %}">
+                           <form method="post" action="{% url 'student_apply_leave_save' %}">
                               {% csrf_token %}
                                  <div class="col-12">
                                     <h5 class="form-title"><span>Apply For Leave</span></h5>
@@ -73,7 +73,7 @@
                                   </tr>
                                </thead>
                                <tbody>
-                                 {% for i in staff_leave_history %}
+                                 {% for i in student_leave_history %}
                                   <tr>
                                      <td>{{i.date}}</td>
                                      <td>{{i.message}}</td>
