--- a/Config/templates/Hod/view_session.html
+++ b/Config/templates/Hod/view_session.html
@@ -27,7 +27,7 @@
                          <tr>
                             <th>ID</th>
                             <th>Session Year Start</th>
-                            <th>Session Year Start</th>
+                            <th>Session Year End</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
