--- a/Config/templates/Hod/staff_leave.html
+++ b/Config/templates/Hod/staff_leave.html
@@ -64,4 +64,9 @@
           </div>
        </div>
     </div>
+    <script type="text/javascript">
+      $(document).ready(function () {
+      $('#table_id').dataTable();
+      });
+      </script>
 {% endblock content %}
