--- a/Config/templates/Staff/home.html
+++ b/Config/templates/Staff/home.html
@@ -1,1 +1,141 @@
 {% extends 'base.html' %}
+
+{% block content %}
+<div class="content container-fluid">
+    <div class="page-header">
+       <div class="row">
+          <div class="col-sm-12">
+             <h3 class="page-title">Welcome Staff!</h3>
+             <ul class="breadcrumb">
+                <li class="breadcrumb-item active">Dashboard</li>
+             </ul>
+          </div>
+       </div>
+    </div>
+    <div class="row">
+       <div class="col-xl-3 col-sm-6 col-12 d-flex">
+          <div class="card bg-one w-100">
+             <div class="card-body">
+                <div class="db-widgets d-flex justify-content-between align-items-center">
+                   <div class="db-icon">
+                      <i class="fas fa-user-graduate"></i>
+                   </div>
+                   <div class="db-info">
+                      <h3>{{student_count}}</h3>
+                      <h6>Students</h6>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+       <div class="col-xl-3 col-sm-6 col-12 d-flex">
+          <div class="card bg-two w-100">
+             <div class="card-body">
+                <div class="db-widgets d-flex justify-content-between align-items-center">
+                   <div class="db-icon">
+                      <i class="fas fa-chalkboard-teacher"></i>
+                   </div>
+                   <div class="db-info">
+                      <h3>{{staff_count}}</h3>
+                      <h6>Staff</h6>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+       <div class="col-xl-3 col-sm-6 col-12 d-flex">
+          <div class="card bg-three w-100">
+             <div class="card-body">
+                <div class="db-widgets d-flex justify-content-between align-items-center">
+                   <div class="db-icon">
+                      <i class="fas fa-graduation-cap"></i>
+                   </div>
+                   <div class="db-info">
+                      <h3>{{course_count}}</h3>
+                      <h6>Course</h6>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+       <div class="col-xl-3 col-sm-6 col-12 d-flex">
+          <div class="card bg-four w-100">
+             <div class="card-body">
+                <div class="db-widgets d-flex justify-content-between align-items-center">
+                   <div class="db-icon">
+                      <i class="fas fa-book"></i>
+                   </div>
+                   <div class="db-info">
+                      <h3>{{subject_count}}</h3>
+                      <h6>Subject</h6>
+                   </div>
+                </div>
+             </div>
+          </div>
+       </div>
+    </div>
+    <div class="row">
+       <div class="col-md-12 col-lg-6">
+          <div class="card card-chart">
+             <div class="card-header">
+                <div class="row align-items-center">
+                   <div class="col-6">
+                      <h5 class="card-title">All Data</h5>
+
+                   </div>
+                </div>
+             </div>
+             <div class="card-body">
+                <div id="All_details"></div>
+             </div>
+          </div>
+       </div>
+       <div class="col-md-12 col-lg-6">
+          <div class="card card-chart">
+             <div class="card-header">
+                <div class="row align-items-center">
+                   <div class="col-6">
+                      <h5 class="card-title">Number of Students</h5>
+                   </div>
+                </div>
+             </div>
+             <div class="card-body">
+                <div id="student_gender"></div>
+             </div>
+          </div>
+       </div>
+      </div>
+      <div class="row">
+         <div class="col-md-12 col-lg-6">
+            <div class="card card-chart">
+               <div class="card-header">
+                  <div class="row align-items-center">
+                     <div class="col-6">
+                        <h5 class="card-title">Student And Staff</h5>
+  
+                     </div>
+                  </div>
+               </div>
+               <div class="card-body">
+                  <div id="student_staff"></div>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-12 col-lg-6">
+            <div class="card card-chart">
+               <div class="card-header">
+                  <div class="row align-items-center">
+                     <div class="col-6">
+                        <h5 class="card-title">Course And Subject</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="card-body">
+                  <div id="course_subject"></div>
+               </div>
+            </div>
+         </div>
+        </div>
+ </div>
+ {% include 'includes/chart.html' %}
+{% endblock content %}
