--- a/Config/templates/Staff/take_attendance.html
+++ b/Config/templates/Staff/take_attendance.html
@@ -82,12 +82,13 @@
                          </div>
                       </div>
                       {% for i in students %}
-                      <div class="col-12 mt-1">
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1" value="{{i.id}}" name="students_id">
-                                <label class="form-check-label" for="exampleCheck1">{{i.admin.first_name}}&nbsp; {{i.admin.last_name}}</label>
-                            </div>
+                      <div class="container">
+                        <div class="col-md-1 px-100 border border-warning border-right-0 border-bottom-0 ">
+                           <input type="checkbox" class="form-check-input" id="exampleCheck1" value="{{i.id}}" name="students_id">
+                            <img src="/{{i.admin.profile_pic}}" class="img-fluid rounded-circle p-2 bg-light border">
+                            <label class="form-check-label " for="exampleCheck1">{{i.admin.first_name}}&nbsp;{{i.admin.last_name}}</label>
                         </div>
+                    </div>
                         {% endfor %}
                       <div class="col-12 mt-4">
                          <button type="submit" class="btn btn-primary">Submit</button>
