--- a/Config/templates/login.html
+++ b/Config/templates/login.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
       <title>Preskool - Login</title>
-      <link rel="shortcut icon" href="{% static 'assets/img/favicon.png' %}">
+      <link rel="shortcut icon" href="{% static 'assets/img/favicons.png' %}">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;1,400&amp;display=swap">
       <link rel="stylesheet" href="{% static 'assets/plugins/bootstrap/css/bootstrap.min.css' %}">
       <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome/css/fontawesome.min.css' %}">
@@ -19,7 +19,7 @@
             <div class="container">
                <div class="loginbox">
                   <div class="login-left">
-                     <img class="img-fluid" src="{% static 'assets/img/logo-white.png' %}" alt="Logo">
+                     <img class="img-fluid" src="{% static 'assets/img/login_log.gif' %}" alt="Logo">
                   </div>
                   <div class="login-right">
                      <div class="login-right-wrap">
